--- a/webserver.yml
+++ b/webserver.yml
@@ -2,10 +2,21 @@
 - hosts: webserver
   become: true
   tasks:
-    - name: install apache2
+    - name: install web components
       apt: name={{item}} state=present update_cache=yes
       with_items:
         - apache2
         - libapache2-mod-wsgi
         - python-pip
         - python-virtualenv
+
+    - name: ensure apache2 started
+      service: name=apache2 state=started enabled=yes
+    - name: ensure mod_wsgi enabled=yes
+      apache2_module: state=present name=wsgi
+      notify: restart apache2
+
+  handlers:
+    - name: restart apache2
+      service: name=apache2 state=restarted
+      
